--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-haskell@v1
       with:
-        ghc-version: '9.2.1'
+        ghc-version: '8.10.7'
         cabal-version: '3.6.2'
 
     - name: Cache
@@ -32,6 +32,9 @@ jobs:
 
     - name: Install dependencies
       run: |
+        ghcup upgrade
+        ghcup install ghc 8.10.7
+        ghcup set ghc 8.10.7
         cabal update
         cabal build --only-dependencies --enable-tests --enable-benchmarks
     - name: Build
