--- a/cabal-sample.cabal
+++ b/cabal-sample.cabal
@@ -9,7 +9,7 @@ homepage:
 
 -- A URL where users can report bugs.
 -- bug-reports:
-license:            NONE
+license:
 author:             takachi2
 maintainer:
 
@@ -18,36 +18,49 @@ maintainer:
 -- category:
 extra-source-files: CHANGELOG.md
 
+common shared-properties
+  build-depends:    base ^>=4.14.3.0
+  default-language: Haskell2010
+  ghc-options:
+    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
+    -Wmissing-import-lists -Wcompat
+
+common test-depends
+  build-depends:      hspec ^>=2.7.10
+  build-tool-depends: hspec-discover:hspec-discover -any
+
 library
-    exposed-modules:  MyLib
+  import:          shared-properties
 
-    -- Modules included in this library but not exported.
-    -- other-modules:
+  -- cabal-fmt: expand src
+  exposed-modules: MyLib
 
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
-    build-depends:    base ^>=4.16.0.0
-    hs-source-dirs:   src
-    default-language: Haskell2010
+  -- Modules included in this library but not exported.
+  -- other-modules:
+
+  -- LANGUAGE extensions used by modules in this package.
+  -- other-extensions:
+  hs-source-dirs:  src
 
 executable cabal-sample
-    main-is:          Main.hs
+  import:         shared-properties
+  main-is:        Main.hs
 
-    -- Modules included in this executable, other than Main.
-    -- other-modules:
+  -- cabal-fmt: expand app -Main
+  -- Modules included in this executable, other than Main.
+  -- other-modules:
 
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
-    build-depends:
-        base ^>=4.16.0.0,
-        cabal-sample
-
-    hs-source-dirs:   app
-    default-language: Haskell2010
+  -- LANGUAGE extensions used by modules in this package.
+  -- other-extensions:
+  build-depends:  cabal-sample
+  hs-source-dirs: app
 
 test-suite cabal-sample-test
-    default-language: Haskell2010
-    type:             exitcode-stdio-1.0
-    hs-source-dirs:   test
-    main-is:          MyLibTest.hs
-    build-depends:    base ^>=4.16.0.0
+  import:         shared-properties, test-depends
+  type:           exitcode-stdio-1.0
+  hs-source-dirs: test
+  main-is:        Spec.hs
+
+  -- cabal-fmt: expand test -Spec
+  other-modules:  MyLibSpec
+  build-depends:  cabal-sample
