--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -13,7 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-haskell@v1
+    # - uses: actions/setup-haskell@v1
+    - uses: haskell/actions/setup@v1.2
       with:
         ghc-version: '8.10.7'
         cabal-version: '3.6.2'
